# payment-processing-engine

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
infra/migrations/: 002_accounts.sql  002_accounts.up.sql  003_transactions.sql  003_transactions.up.sql  004_entries.sql  004_entries.up.sql  005_outbox.up.sql
services/api-gateway/: Dockerfile
services/api-gateway/cmd/: main.go
services/api-gateway/internal/auth/: authenticator.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/idempotency/: redis.go
services/api-gateway/internal/queue/: producer.go
services/api-gateway/internal/transport/: handlers.go  handlers_test.go  middleware.go  respond.go
services/orchestrator/: Dockerfile
services/orchestrator/cmd/: main.go
services/orchestrator/internal/bank/: client.go
services/orchestrator/internal/db/: postgres.go
services/orchestrator/internal/ledger/: errors.go  models.go  repo.go  service.go
services/orchestrator/internal/worker/: consumer.go
services/sequencer/: CMakeLists.txt  Dockerfile
services/sequencer/src/: engine.cpp  engine.hpp  kafka_client.cpp  kafka_client.hpp  main.cpp
services/webhook-service/: Dockerfile
services/webhook-service/cmd/: main.go
services/webhook-service/internal/dispatcher/: worker.go
services/webhook-service/internal/outbox/: repo.go
